@@ -1,6 +1,7 @@
 August - 0.9.8.1
 - UI: Satellite list, propagation modes and others are now shown sorted. (TNX Isabel)
 - UI: Added default values to the infoWidget (Continent, Prefix, CQ, ITU...). (TNX Isabel)
+- UI: RX/TX Freq in Satellite tab are also in red/black depending on the frequency being out/in of ham bands.
 - Bugfix: Editing a QSO to remove a comment was not properly working. (TNX Isabel)
 - Bugfix: Worked & Confirmed QSO numbers are now aligned in the Awards tab. (TNX Isabel)
 - Bugfix: KLog.pro is now fixed to compile in Linux. (TNX KB2YSI)
